--- a/sass/main.scss
+++ b/sass/main.scss
@@ -59,6 +59,15 @@ $breakpoint: 576px;
   }
 }
 
+.abtbtn {
+  font-size: 1.3rem;
+  font-family: sans-serif;
+  display: inline-block;
+  margin-left: 28vw;
+  margin-bottom: 30px;
+  padding: 10px 15px 10px 15px;
+}
+
 .introP p, h1 {
   color: $whiteC;
 }
